# sc_decode

./: Cargo.toml  README.md
src/: lib.rs  main.rs
