[package]
name = "sc_decode"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Special character decoding"
authors = ["flunas <flunas@163.com>"]
keywords = ["decode"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3